# design_pattern

./: .gitignore  CMakeLists.txt  README.md
docs/: learning-path.md
lessons/01_strategy/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/01_strategy/after/: shipping.hpp
lessons/01_strategy/before/: shipping.hpp
lessons/01_strategy/tests/: strategy_test.cpp
lessons/02_factory/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/02_factory/after/: notification.hpp
lessons/02_factory/before/: notification.hpp
lessons/02_factory/tests/: factory_test.cpp
lessons/03_observer/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/03_observer/before/: order.hpp
lessons/03_observer/tests/: observer_test.cpp
lessons/04_decorator/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/04_decorator/before/: drink.hpp
lessons/04_decorator/tests/: decorator_test.cpp
lessons/05_adapter/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/05_adapter/after/: payment.hpp
lessons/05_adapter/before/: payment.hpp
lessons/05_adapter/tests/: adapter_test.cpp
lessons/06_template_method/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/06_template_method/before/: report.hpp
lessons/06_template_method/tests/: template_method_test.cpp
lessons/07_state/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/07_state/before/: ticket.hpp
lessons/07_state/tests/: state_test.cpp
lessons/08_command/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/08_command/before/: editor.hpp
lessons/08_command/tests/: command_test.cpp
lessons/09_singleton/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/09_singleton/before/: config.hpp
lessons/09_singleton/tests/: singleton_test.cpp
lessons/10_facade/: README.md  after.hpp  after_test.cpp  before.hpp  before_test.cpp  notes.md  practice.hpp  test.cpp
lessons/10_facade/before/: checkout.hpp
lessons/10_facade/tests/: facade_test.cpp
solutions/03_observer/after/: order.hpp
solutions/04_decorator/after/: drink.hpp
solutions/06_template_method/after/: report.hpp
solutions/07_state/after/: ticket.hpp
solutions/08_command/after/: editor.hpp
solutions/09_singleton/after/: config.hpp
solutions/10_facade/after/: checkout.hpp
tests/: test_framework.hpp
